--- a/base_v2_1694633866189.css
+++ b/base_v2_1694633866189.css
@@ -465,6 +465,26 @@ footer .logo-footer a{
     background-color:var(--loader);
     animation:pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite
 }
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+.topnav a {
+  float: left;
+  color: #4790FC;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: #4790FC;
+}
+.topnav a.active {
+  background-color: #da3b33;
+  color: white;
+}
 @keyframes pulse{
     0%,100%{
         opacity:1
