--- a/base_v2_1694633866189.css
+++ b/base_v2_1694633866189.css
@@ -467,7 +467,7 @@ footer .logo-footer a{
 }
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #4790FC;
 }
 .topnav a {
   float: left;
@@ -482,7 +482,7 @@ footer .logo-footer a{
   color: #4790FC;
 }
 .topnav a.active {
-  background-color: #da3b33;
+  background-color: #79a7ed;
   color: white;
 }
 @keyframes pulse{
