style: display block a href in nav

--- a/base_v2_1694633866189.css
+++ b/base_v2_1694633866189.css
@@ -472,6 +472,7 @@ footer .logo-footer a{
 .topnav a {
   float: left;
   color: #4790FC;
+  display: block;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
